[gd_scene load_steps=16 format=3 uid="uid://dtjjcmmlgds6b"]

[ext_resource type="PackedScene" uid="uid://crwhoe2maql3v" path="res://Player.tscn" id="1_unuhi"]
[ext_resource type="Script" path="res://Scripts/Game.gd" id="1_ya0v7"]
[ext_resource type="PackedScene" uid="uid://bajrtrqs6rwf0" path="res://Ball.tscn" id="2_3ggyb"]
[ext_resource type="Script" path="res://Scripts/RestartScreen.gd" id="3_pe5ce"]
[ext_resource type="PackedScene" uid="uid://c6dt8g2ui5rgd" path="res://TileRow.tscn" id="4_67bf0"]
[ext_resource type="AudioStream" uid="uid://bs8bmtes4fcr5" path="res://Assets/game_win.wav" id="6_s6gau"]
[ext_resource type="AudioStream" uid="uid://6e6oxpsub8ft" path="res://Assets/game_over.wav" id="7_2d07v"]
[ext_resource type="AudioStream" uid="uid://dres8e4ohd3hd" path="res://Assets/music.mp3" id="8_vyxd7"]

[sub_resource type="Gradient" id="Gradient_h4b1b"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 0.588235)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_it5o2"]
gradient = SubResource("Gradient_h4b1b")

[sub_resource type="LabelSettings" id="LabelSettings_igkqc"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_lqgys"]
font_size = 24

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1a2lg"]
size = Vector2(10, 640)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oi16k"]
size = Vector2(500, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_moi1b"]
size = Vector2(500, 20)

[node name="Game" type="Node2D"]
script = ExtResource("1_ya0v7")
BallNode = ExtResource("2_3ggyb")

[node name="RestartScreen" type="CanvasLayer" parent="."]
process_mode = 3
visible = false
script = ExtResource("3_pe5ce")

[node name="Background" type="TextureRect" parent="RestartScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_it5o2")

[node name="RestartText" type="Label" parent="RestartScreen"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -95.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1

[node name="Score" type="Label" parent="RestartScreen"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -50.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 2
text = "Your Score: "
horizontal_alignment = 1

[node name="Control" type="Control" parent="RestartScreen"]
layout_mode = 3
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 30.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="RestartButton" type="Button" parent="RestartScreen/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.5
offset_top = -15.5
offset_right = 32.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Restart"

[node name="UserInterface" type="CanvasLayer" parent="."]

[node name="Score" type="Label" parent="UserInterface"]
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 33.0
text = "000"
label_settings = SubResource("LabelSettings_igkqc")

[node name="Balls" type="Label" parent="UserInterface"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 33.0
grow_horizontal = 0
text = "003
"
label_settings = SubResource("LabelSettings_lqgys")
horizontal_alignment = 2

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 500.0
offset_bottom = 640.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_it5o2")

[node name="Tiles" type="Node" parent="."]

[node name="TileRow" parent="Tiles" instance=ExtResource("4_67bf0")]
modulate = Color(1, 0.113725, 0.207843, 1)
position = Vector2(250, 100)

[node name="TileRow2" parent="Tiles" instance=ExtResource("4_67bf0")]
modulate = Color(1, 0.52549, 0.290196, 1)
position = Vector2(250, 120)

[node name="TileRow3" parent="Tiles" instance=ExtResource("4_67bf0")]
modulate = Color(1, 1, 0, 1)
position = Vector2(250, 140)

[node name="TileRow4" parent="Tiles" instance=ExtResource("4_67bf0")]
modulate = Color(0, 1, 0, 1)
position = Vector2(250, 160)

[node name="TileRow5" parent="Tiles" instance=ExtResource("4_67bf0")]
modulate = Color(0, 1, 1, 1)
position = Vector2(250, 180)

[node name="TileRow6" parent="Tiles" instance=ExtResource("4_67bf0")]
modulate = Color(0.580392, 0, 1, 1)
position = Vector2(250, 200)

[node name="Walls" type="Node" parent="."]

[node name="WallLeft" type="StaticBody2D" parent="Walls"]

[node name="Collider" type="CollisionShape2D" parent="Walls/WallLeft"]
position = Vector2(0, 320)
shape = SubResource("RectangleShape2D_1a2lg")

[node name="WallShape" type="Polygon2D" parent="Walls/WallLeft"]
polygon = PackedVector2Array(-5, 0, 5, 0, 5, 640, -5, 640)

[node name="PlayerAlign" type="Polygon2D" parent="Walls/WallLeft"]
color = Color(0.529412, 0.631373, 1, 1)
polygon = PackedVector2Array(5, 568, 5, 584, -5, 584, -5, 568)

[node name="WallRight" type="StaticBody2D" parent="Walls"]
position = Vector2(500, 0)

[node name="Collider" type="CollisionShape2D" parent="Walls/WallRight"]
position = Vector2(0, 320)
shape = SubResource("RectangleShape2D_1a2lg")

[node name="WallShape" type="Polygon2D" parent="Walls/WallRight"]
polygon = PackedVector2Array(-5, 0, 5, 0, 5, 640, -5, 640)

[node name="PlayerAlign" type="Polygon2D" parent="Walls/WallRight"]
color = Color(0.529412, 0.631373, 1, 1)
polygon = PackedVector2Array(5, 568, 5, 584, -5, 584, -5, 568)

[node name="Ceiling" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Ceiling"]
position = Vector2(250, 0)
shape = SubResource("RectangleShape2D_oi16k")

[node name="Polygon2D" type="Polygon2D" parent="Walls/Ceiling"]
polygon = PackedVector2Array(0, 5, 0, -5, 500, -5, 500, 5)

[node name="Floor" type="Area2D" parent="Walls"]
position = Vector2(250, 645)

[node name="DeadZone" type="CollisionShape2D" parent="Walls/Floor"]
shape = SubResource("RectangleShape2D_moi1b")

[node name="Movers" type="Node" parent="."]

[node name="Ball" parent="Movers" instance=ExtResource("2_3ggyb")]
position = Vector2(250, 250)

[node name="Player" parent="Movers" instance=ExtResource("1_unuhi")]
position = Vector2(250, 575)

[node name="Audio" type="Node" parent="."]
process_mode = 3

[node name="GameWin" type="AudioStreamPlayer2D" parent="Audio"]
process_mode = 3
stream = ExtResource("6_s6gau")

[node name="GameOver" type="AudioStreamPlayer2D" parent="Audio"]
process_mode = 3
stream = ExtResource("7_2d07v")

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_vyxd7")
volume_db = -10.0
autoplay = true

[connection signal="pressed" from="RestartScreen/Control/RestartButton" to="RestartScreen" method="_on_restart"]
[connection signal="body_entered" from="Walls/Floor" to="." method="_floor_entered"]
